# srs-cli

./: Cargo.toml  README.md
src/: add.rs  app.rs  cards.rs  clock.rs  createdeck.rs  decks.rs  delete.rs  deletedeck.rs  edit.rs  editor.rs  error.rs  init.rs  intmod.rs  lib.rs  main.rs  opt.rs  prompt.rs  rand.rs  review.rs  schedule.rs  schema.sql  search.rs  select.rs  srs.rs  stats.rs  switch.rs  time.rs  tmp.rs
