[package]
name = "srs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
pico-args = "0.4.2"
rand = {version = "0.8.5", default-features = false, features = ["getrandom", "small_rng"]}
rusqlite = {version = "0.27.0", features = ["bundled"]}
scrawl = "1.1.0"
termion = "1.5.6"
time = {version = "0.3.9", features = ["local-offset"]}

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
