[package]
name = "srs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
fastrand = "1.7.0"
pico-args = "0.4.2"
rusqlite = {version = "0.27.0", features = ["bundled"]}
termion = "1.5.6"
time = {version = "0.3.9", features = ["local-offset"]}

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
